# Circuit

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/: Dev.sh
Circuit-App/: CMakeLists.txt
Circuit-App/include/: App.h
Circuit-App/src/: App.cpp
Circuit-Core/: CMakeLists.txt
Circuit-Core/include/: Core.h
Circuit-Core/src/: Core.cpp
Circuit-Editor/: CMakeLists.txt
src/: App.cpp  main.cpp
